--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>Kanban Board</title>
     <link rel="stylesheet" href="./dist/app.css"/>
     <link rel="shortcut icon" type="image/png" href="./favicon32.png">
   </head>
